# litebox

./: .gitignore  CODESPACE_SETUP.md  CONTRIBUTING.md  Cargo.toml  README.md  SESSION_SUMMARY.md  SESSION_SUMMARY_NEW.md  SESSION_SUMMARY_old_backup.md  TEST_SUITE_SUMMARY.md  _codeql_detected_source_root  rust-toolchain.toml  trace.json
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
dev_bench/: Cargo.toml
dev_tests/: Cargo.toml
docs/: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE4_COMPLETE.md  PHASE4_IMPLEMENTATION.md  PHASE5_COMPLETE.md  PHASE5_IMPLEMENTATION.md  PHASE6_100_PERCENT_COMPLETE.md  PHASE6_COMPLETE.md  PHASE6_FINAL_VERIFICATION.md  PHASE6_IMPLEMENTATION.md  PHASE6_PARTIAL_COMPLETION.md  PHASE6_SUMMARY.md  PHASE7_IMPLEMENTATION.md  PHASE7_SESSION_SUMMARY.md  QUICK_SETUP.md  README.md  cpp-exception-status.md  cpp-exceptions-status-plan.md  mingw_bug_submission.md  mingw_bug_submission_guide.md  mingw_crt_ctor_list_bug_report.md  phase1_implementation_summary.md  rebasing.md  windows_on_linux_continuation_plan.md  windows_on_linux_implementation_plan.md  windows_on_linux_status.md  windows_on_linux_tls_improvements.md  workspace_setup_optimization.md
litebox/: Cargo.toml
litebox_common_linux/: Cargo.toml
litebox_common_optee/: Cargo.toml
litebox_packager/: Cargo.toml  build.rs
litebox_platform_linux_for_windows/: Cargo.toml  README.md
litebox_platform_linux_for_windows/src/: advapi32.rs  bcrypt.rs  function_table.rs  gdi32.rs  kernel32.rs  lib.rs  msvcp140.rs  msvcrt.rs  ntdll_impl.rs  ole32.rs  oleaut32.rs  shell32.rs  shlwapi.rs  trampoline.rs  user32.rs  userenv.rs  version.rs  vulkan1.rs  vulkan_loader.rs  ws2_32.rs
litebox_platform_linux_for_windows/tests/: placeholder_tests.rs
litebox_platform_linux_kernel/: Cargo.toml
litebox_platform_linux_userland/: Cargo.toml
litebox_platform_lvbs/: Cargo.toml
litebox_platform_multiplex/: Cargo.toml
litebox_platform_windows_userland/: Cargo.toml
litebox_rtld_audit/: rtld_audit.c
litebox_runner_linux_on_windows_userland/: Cargo.toml
litebox_runner_linux_userland/: Cargo.toml  build.rs
litebox_runner_lvbs/: Cargo.toml  rust-toolchain.toml
litebox_runner_optee_on_linux_userland/: Cargo.toml
litebox_runner_snp/: Cargo.toml  rust-toolchain.toml
litebox_runner_windows_on_linux_userland/: Cargo.toml  README.md
litebox_runner_windows_on_linux_userland/src/: lib.rs  main.rs
litebox_runner_windows_on_linux_userland/tests/: integration.rs  tracing.rs  tracing_tests.rs
litebox_runner_windows_on_linux_userland/tests/integration/: placeholder.rs
litebox_shim_linux/: Cargo.toml
litebox_shim_optee/: Cargo.toml
litebox_shim_windows/: Cargo.toml  README.md
litebox_shim_windows/src/: lib.rs
litebox_shim_windows/src/loader/: dispatch.rs  dll.rs  execution.rs  mod.rs  pe.rs
litebox_shim_windows/src/syscalls/: dispatch.rs  mod.rs  ntdll.rs
litebox_shim_windows/src/tracing/: config.rs  event.rs  filter.rs  formatter.rs  mod.rs  tracer.rs  wrapper.rs
litebox_shim_windows/tests/: pe_loader_tests.rs
litebox_syscall_rewriter/: Cargo.toml
pull_requests/: 1.json  (+1 more)
(+108 files in other folders)
