[package]
name = "litebox_platform_linux_for_windows"
version = "0.1.0"
edition = "2021"

[dependencies]
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_shim_windows = { path = "../litebox_shim_windows/", version = "0.1.0" }
thiserror = { version = "2.0.6", default-features = false }
libc = "0.2.177"

[lints]
workspace = true
