[package]
name = "litebox_runner_windows_on_linux_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.33", features = ["derive"] }
litebox = { version = "0.1.0", path = "../litebox" }
litebox_shim_windows = { version = "0.1.0", path = "../litebox_shim_windows" }
litebox_platform_linux_for_windows = { version = "0.1.0", path = "../litebox_platform_linux_for_windows" }
litebox_common_linux = { version = "0.1.0", path = "../litebox_common_linux" }

[lints]
workspace = true
